[package]
name = "holaplex-indexer"
version = "0.1.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "Indexer write worker for caching Metaplex data"
documentation = "https://docs.rs/holaplex-indexer"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
default = []
http = [
  "cid",
  "reqwest",
  "search-dispatch",
  "serde_json",
  "indexer-rabbitmq/http-indexer",
  "indexer-rabbitmq/producer",
  "indexer-rabbitmq/search-indexer",
]
job-runner = [
  "serde_json",
  "solana-client",
  "solana-transaction-status",
  "indexer-rabbitmq/job-runner",
]
search = [
  "crossbeam",
  "serde_json",
  "indexer-core/meilisearch",
  "indexer-rabbitmq/search-indexer",
]
search-dispatch = [
  "serde_json",
  "indexer-core/meilisearch",
  "indexer-rabbitmq/producer",
  "indexer-rabbitmq/search-indexer",
]

[[bin]]
name = "holaplex-indexer-http"
required-features = ["http"]

[[bin]]
name = "holaplex-indexer-job-runner"
required-features = ["job-runner"]

[[bin]]
name = "holaplex-indexer-search"
required-features = ["search"]

[dependencies]
async-trait = "0.1.60"
bs58 = "0.4.0"
crossbeam = { version = "0.8.2", optional = true }
futures-util = "0.3.25"
hostname = "0.3.1"
serde = { version = "1.0.151", features = ["derive"] }
solana-client = { version = "~1.13.5", optional = true }
solana-program = ">=1.9.28,<1.14"
solana-sdk = ">=1.9.28,<1.14"
solana-transaction-status = { version = "~1.13.5", optional = true }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"

# HTTP indexer
cid = { version = "0.9.0", optional = true }
reqwest = { version = "0.11.13", features = ["json", "gzip", "brotli", "deflate"], optional = true }
serde_json = { version = "1.0.91", optional = true }

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
git = "https://github.com/holaplex/indexer-geyser-plugin"
tag = "v0.8.1"
version = "=0.4.1"

[dependencies.indexer-selector]
package = "holaplex-indexer-geyser-selector"
git = "https://github.com/holaplex/indexer-geyser-plugin"
tag = "v0.8.1"
version = "=0.1.1"

# Workspace dependencies
[dependencies.indexer-core]
package = "holaplex-indexer-core"
version = "=0.1.0"
path = "../core"
features = ["indexer-rabbitmq"]
