[package]
name = "holaplex-indexer-moonrank"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "moonrank-collections-indexer"
path = "main.rs"

[dependencies]
reqwest = { version = "0.11.6"}
url = "2.2.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
tokio = { version = "1.13.0"}
futures-util = "0.3.21"

[dependencies.indexer-core]
package = "holaplex-indexer-core"
path = "../core"

[dependencies.indexer]
package = "holaplex-indexer"
path = "../indexer"
features = ["search-dispatch"]

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
git = "https://github.com/holaplex/indexer-geyser-plugin"
tag = "v0.6.0"