[package]
name = "holaplex-indexer-moonrank"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "moonrank-collections-indexer"
path = "main.rs"

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
url = "2.3.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = "1.14.1"
futures-util = "0.3.25"

[dependencies.indexer-core]
package = "holaplex-indexer-core"
path = "../core"
features = ["chrono-serde"]

[dependencies.indexer]
package = "holaplex-indexer"
path = "../indexer"
features = ["search-dispatch"]

[dependencies.indexer-rabbitmq]
package = "holaplex-indexer-rabbitmq"
git = "https://github.com/holaplex/indexer-geyser-plugin"
tag = "v0.8.1"
version = "=0.4.1"
