[package]
name = "holaplex-indexer-rabbitmq"
version = "0.1.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "RabbitMQ transport components for holaplex-indexer"
documentation = "https://docs.rs/holaplex-indexer-rabbitmq"
readme = "../../README.md"
repository = "https://github.com/holaplex/indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3", "rabbitmq"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[features]
consumer = ["suffix"]
default = ["consumer"]
geyser = ["solana-sdk", "suffix"]
http-indexer = ["suffix"]
producer = ["suffix"]
suffix = ["clap"]

[dependencies]
clap = { version = "3.1.12", default-features = false, features = ["env", "std"], optional = true }
futures-util = "0.3.19"
lapin = "2.0.3"
log = "0.4.14"
rand = "0.8.5"
rmp-serde = "1.0.0-beta.2"
serde = { version = "1.0.133", features = ["derive"] }
solana-sdk = { version = "1.9.4", optional = true }
strum = { version = "0.23.0", features = ["derive"] }
thiserror = "1.0.30"
