[package]
name = "metaplex-indexer-rpc"
version = "0.1.0"
authors = [
  "ryans <ryans@holaplex.com>",
]
edition = "2021"
description = "JSONRPC read replica for providing cached Metaplex data"
documentation = "https://docs.rs/metaplex-indexer-rpc"
readme = "../../README.md"
repository = "https://github.com/holaplex/metaplex-indexer"
license = "AGPL-3.0-or-later"
keywords = ["solana", "metaplex", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[dependencies]
clap = "3.0.0-beta.5"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
serde = { version = "1.0.130", features = ["derive"] }
solana-sdk = "1.8.5"
tokio = "1.14.0"

[dependencies.indexer-core]
package = "metaplex-indexer-core"
version = "=0.1.0"
path = "../core"

